[package]
name = "tenx-websummary-derive"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../../LICENSE"
edition = "2021"
publish = false
exclude = ["tests/"]

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
darling = "0.14.2"
itertools = ">=0.10"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.89"
