[package]
name = "tenx-websummary-derive"
version = "0.1.0"
authors = ["10x Genomics"]
license-file = "../../LICENSE"
edition = "2021"
publish = false
exclude = ["tests/"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
itertools = ">=0.10,<1"
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
trybuild = "1"
